# AnalysisTreeTaskSkeleton

./: CMakeLists.txt  README.md
at_task/: CMakeLists.txt  Task.h  TaskRegistry.cpp  UserTask.cpp  UserTask.h  task_main.cpp
ati2/: ATI2.cpp  ATI2.hpp  ATI2_ATHelper.hpp  ATI2_fwd.hpp  Branch.cpp  Branch.hpp  BranchChannel.cpp  BranchChannel.hpp  CMakeLists.txt  EntityWrapper.hpp  ValueHolder.cpp  ValueHolder.hpp  Variable.cpp  Variable.hpp
cmake/: AnalysisTree.cmake  AnalysisTreeCuts.cmake
sample_task/: CMakeLists.txt  SampleTask.h
